--- a/tutoring-site/styles/Home.module.scss
+++ b/tutoring-site/styles/Home.module.scss
@@ -1,113 +1,71 @@
 @import "mixins";
 @import "variables";
 
-.container {
-  padding: 0 2rem;
+.big {
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
-.main {
+.startingContainer {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.subtitle {
+  color: $darkest;
+  font-family: $OpenSans;
+  font-size: 2vh;
+  margin-bottom: 5vh
+}
 
-  a {
-    display: flex;
+.searchButton {
+  @include roudedButton;
+
+  padding-left: 4vh;
+  padding-right: 4vh;
+}
+
+.startingBubbles {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 50%;
+  height: auto;
+  z-index: 0;
+}
+
+.startingLeft {
+  z-index: 2;
+  padding-right: 7%;
+}
+
+.boyImage {
+  width: 100%;
+  height: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .title {
+    @include center;
+    font-size: 3.8vh;
+  }
+
+  .subtitle {
+    @include center;
+  }
+
+  .startingLeft {
     justify-content: center;
-    align-items: center;
-    flex-grow: 1;
-  }
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-
-  a {
-    color: $default-blue;
-    text-decoration: none;
-
-    &:hover, &:focus, &:active {
-      text-decoration: underline;
-    }
+    margin-top: -30vh;
+    padding-right: 0;
   }
 
-  @include center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-  @include center;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-
-  &:hover, &:focus, &:active {
-    color: $default-blue;
-    border-color: $default-blue;
+  .boyImage {
+    width: 60%;
+    height: 60%;
   }
 
-  h2 {
-    margin: 0 0 1rem 0;
-    font-size: 1.5rem;
-  }
-
-  p {
-    margin: 0;
-    font-size: 1.25rem;
-    line-height: 1.5;
-  }
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+  .startingBubbles {
+    display: none;
   }
 }
