--- a/tutoring-site/styles/_mixins.scss
+++ b/tutoring-site/styles/_mixins.scss
@@ -15,3 +15,15 @@
     background-color: $dark;
   }
 }
+
+@mixin homepageSection() {
+  padding-left: 20%;
+  padding-right: 20%;
+  min-height: 100vh;
+
+  @media only screen and (max-width: 600px) {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
+
