--- a/tutoring-site/styles/Home.module.scss
+++ b/tutoring-site/styles/Home.module.scss
@@ -59,6 +59,11 @@
   border-radius: 25px;
   padding: 8vh 5vh;
   margin: 1vh;
+  transition: 0.5s;
+
+  &:hover {
+    transform: translateY(-10px) scale(1.02);
+  }
 }
 
 .enrollItemText {
