--- a/tutoring-site/styles/_variables.scss
+++ b/tutoring-site/styles/_variables.scss
@@ -6,5 +6,9 @@ $light: #30E3CA;
 $dark: #11999E;
 $darkest: #40514E;
 
+//Additional colours
+$light-1: #B8E8DF;
+
+
 //Fonts
 $OpenSans: 'Open Sans', sans-serif;
