--- a/tutoring-site/styles/Home.module.scss
+++ b/tutoring-site/styles/Home.module.scss
@@ -206,6 +206,8 @@
   color: rgba(64, 81, 78, 0.7);
   text-align: left;
   margin-top: 0px;
+  font-weight: 600;
+  margin-bottom: 1vh;
 }
 
 .interestedStepText {
@@ -214,6 +216,7 @@
   opacity: 0.9;
   text-align: left;
   margin-bottom: 0px;
+  margin-top:0;
 }
 
 .emailImage {
