--- a/tutoring-site/styles/Events.module.scss
+++ b/tutoring-site/styles/Events.module.scss
@@ -32,14 +32,66 @@
     @include center;
 
     background-color: $lightest;
-    width: 10vh;
-    height: 10vh;
+    min-width: 12vh;
+    min-height: 12vh;
+
+    border-radius: 10px 0 0 10px;
 
     .eventDateMonth {
       letter-spacing: 3px;
-      font-family: "Montserrat";
+      font-family: $Montserrat;
+      font-size: 1.4vh;
+      color: #11999E;
+      font-weight: 700;
+      margin: 0;
+    }
+
+    .eventDateDate {
+      font-family: $Montserrat;
+      font-weight: 700;
+      font-size: 3.6vh;
+      color: #11999E;
+      margin: 0;
     }
   }
+
+  .eventContentBox {
+
+    padding-left: 3.6vh;
+    
+    .eventName {
+      font-family: $OpenSans;
+      font-weight: 700;
+      font-size: 2.4vh;
+      color: #40514E;
+      margin: 0;
+      margin-right: 20px;
+    }
+
+    .eventTimeBox {
+      background-color: #E4F9F5;
+      padding: 0.8vh 1vh;
+      border-radius: 5px;
+    }
+
+    .eventTime {
+      margin: 0;
+      font-size: 1.6vh;
+      font-family: $OpenSans;
+      font-weight: 700;
+      color: #9EC5BC;
+    }
+
+    .eventDetails {
+      font-family: $OpenSans;
+      font-weight: 400;
+      font-size: 2vh;
+      color: #40514E;
+      margin: 0;
+      margin-top: 10px;
+    }
+  }
+
 }
 
 .botSection {
@@ -49,5 +101,5 @@
   min-height: 60vh;
   background: linear-gradient(244.63deg, #30E3CA -7.2%, rgba(48, 227, 202, 0) 67.45%), #11999E;
 
-
+  padding-top: 5%;
 }
