--- a/tutoring-site/styles/_variables.scss
+++ b/tutoring-site/styles/_variables.scss
@@ -8,7 +8,8 @@ $darkest: #40514E;
 
 //Additional colours
 $light-1: #B8E8DF;
-
+$green-tag: #E4F9F5;
+$green-text: #87B1A8;
 
 //Fonts
 $OpenSans: 'Open Sans', sans-serif;
