--- a/tutoring-site/styles/_variables.scss
+++ b/tutoring-site/styles/_variables.scss
@@ -10,6 +10,10 @@ $darkest: #40514E;
 $light-1: #B8E8DF;
 $green-tag: #E4F9F5;
 $green-text: #87B1A8;
+$yellow-tag: #FAF5DF;
+$yellow-text: #B1AD87;
+$red-tag: #F9E4E4;
+$red-text: #B18787;
 
 //Fonts
 $OpenSans: 'Open Sans', sans-serif;
