--- a/tutoring-site/styles/_mixins.scss
+++ b/tutoring-site/styles/_mixins.scss
@@ -54,3 +54,12 @@
   background-color: white;
   border-radius: 10px;
 }
+
+@mixin tag($background, $color) {
+  font-size: 1.8vh;
+  font-weight: 600;
+  border-radius: 5px;
+  padding: 5px 8px;
+  background-color: $background;
+  color: $color;
+}
