--- a/tutoring-site/styles/globals.scss
+++ b/tutoring-site/styles/globals.scss
@@ -38,3 +38,23 @@ p {
   color: $darkest;
   font-family: $OpenSans;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $dark;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+}
