implementing filter done

--- a/tutoring-site/styles/Courses.module.scss
+++ b/tutoring-site/styles/Courses.module.scss
@@ -95,6 +95,12 @@
     top: 45vh;
     bottom: 0;
     transition: 1s ease-in-out;
+
+    .noCourses {
+      color: white;
+      font-family: $OpenSans;
+      font-size: 2vh;
+    }
   }
 }
 
