--- a/tutoring-site/styles/Contact.module.scss
+++ b/tutoring-site/styles/Contact.module.scss
@@ -45,7 +45,7 @@
 }
 
 .emailButton {
-  @include roudedButton;
+  @include roundedButton;
   padding: 2vh;
   padding-left: 4vh;
   padding-right: 4vh;
