--- a/tutoring-site/styles/globals.scss
+++ b/tutoring-site/styles/globals.scss
@@ -42,6 +42,7 @@ p {
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 /* Track */
@@ -52,7 +53,7 @@ p {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: $dark;
-  border-radius: 5px;
+  // border-radius: 5px;
 }
 
 /* Handle on hover */
