--- a/tutoring-site/styles/Courses.module.scss
+++ b/tutoring-site/styles/Courses.module.scss
@@ -46,20 +46,22 @@
   }
 
   .searchContainer {
-    margin-top: -2vh;
+    margin-top: 2vh;
 
     .gradeSliderContainer {
       background-color: $light-1;
-      padding-right: 50px;
-      padding-left: 10px;
-      padding-bottom: 15px;
       border-radius: 60px;
+      padding: 16.5px;
+      padding-left: 25px;
+      padding-right: 35px;
     }
 
     .gradeLabel {
       font-family: $OpenSans;
       color: $dark;
       font-weight: 600;
+      margin: 0;
+      margin-right: 20px;
     }
 
     .searchButton {
@@ -140,18 +142,17 @@
       font-family: $OpenSans;
       font-size: 2.5vh;
       color: $darkest;
-      padding: none;
-      margin-bottom: -.8vh;
-
-      .gradeLevel {
-        @include tag($green-tag, $green-text);
-        margin-left: 2vh;
-      }
+      margin: 0;
+    }
+    .gradeLevel {
+      @include tag($green-tag, $green-text);
+      margin: 0;
     }
   }
 
   .detailsButtonContainer {
     margin-right: 3%;    
+    margin-left: 3%;  
 
     .detailsButton {
       @include roundedButton;
@@ -174,6 +175,7 @@
   color: #9AA2A1;
   padding-bottom: 5px;
   font-weight: 400;
+  margin: 0;
 }
 
 .fadeInSection {
