--- a/tutoring-site/styles/_mixins.scss
+++ b/tutoring-site/styles/_mixins.scss
@@ -31,7 +31,7 @@
 }
 
 @mixin navTitle() {
-  font-weight: 500;
+  font-weight:500;
   font-family: $OpenSans;
   color: $lightest;
   text-transform: uppercase;
@@ -39,6 +39,11 @@
 
   &:hover {
     color: white;
+  }
+
+  @media only screen and (max-width: 600px) {
+    font-weight:700;
+    font-size: 2.5vh;
   }
 }
 
