--- a/tutoring-site/styles/Home.module.scss
+++ b/tutoring-site/styles/Home.module.scss
@@ -57,12 +57,17 @@
   font-weight: 300;
 }
 
+.enrollItem {
+  height: 100%;
+}
+
 .enrollItemContainer {
   background-color: $lightest;
   border-radius: 25px;
   padding: 8vh 5vh;
   margin: 1vh;
   transition: 0.2s;
+  height: 100%;
 
   &:hover {
     transform: translateY(-10px) scale(1.02);
