--- a/tutoring-site/styles/Courses.module.scss
+++ b/tutoring-site/styles/Courses.module.scss
@@ -125,6 +125,7 @@
   box-shadow: 0px 4px 34px rgba(0, 0, 0, 0.08);
 
   .imageContainer {
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 13vh;
@@ -275,6 +276,7 @@
     }
   }
   .imageDetailsContainer {
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 39vh;
