--- a/tutoring-site/styles/Courses.module.scss
+++ b/tutoring-site/styles/Courses.module.scss
@@ -222,7 +222,7 @@
     .courseNameDetails {
       font-size: 2.7vh;
       margin: 0;
-      padding-bottom: 1vh;
+      // padding-bottom: 1vh;
     }
     
     .backButton {
@@ -230,7 +230,7 @@
       margin-right: 1vh;
       margin-left: -1.5vh;
       padding: 0;
-      padding-bottom: 1vh;
+      // padding-bottom: 1vh;
 
       &:hover {
         background-color: $lightest;
@@ -291,9 +291,10 @@
 
 @media only screen and (max-width: 1060px) {
   .imageDetailsContainer {
-    display: none;
+    display: none !important;
   }
 }
+
 @media only screen and (max-width: 600px) {
   /* For mobile phones: */
   .title {
@@ -332,7 +333,7 @@
   }
 
   .imageContainer {
-    display: none;
+    display: none !important;
   }
   .infoContainer {
     padding-top: 2vh !important;
