--- a/tutoring-site/styles/Home.module.scss
+++ b/tutoring-site/styles/Home.module.scss
@@ -293,6 +293,12 @@
   .interestedBubblesLeft, .interestedBubblesRight {
     display: none;
   }
+
+  .enrollItem {
+    height: auto;
+    width: 100%;
+    text-align: left;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -303,10 +309,6 @@
     top: 40%;
     left: 0;
     width: 100%;
-    height: auto;
-  }
-
-  .enrollItem {
     height: auto;
   }
 
@@ -355,6 +357,7 @@
   .enrollItemContainer {
     padding: 3vh;
     margin: 1vh;
+    width: 100%;
   }
 
   .enrollBubblesMobile {
