fixed homepage padding

--- a/tutoring-site/styles/Home.module.scss
+++ b/tutoring-site/styles/Home.module.scss
@@ -46,6 +46,8 @@
 
   background-color: #D0F1EB;
   position: relative;
+  padding-top: 7vh;
+  padding-bottom: 7vh;
 }
 
 .enrollText {
@@ -164,6 +166,7 @@
   background-color: #D0F1EB;
   border-radius: 28px;
   padding: 12vh;
+
 }
 
 .interestedText {
@@ -284,6 +287,8 @@
   .interestedBox {
     border-radius: 0;
     padding: 3vh;
+    padding-top: 7vh;
+    padding-bottom: 7vh;
   }
 
   .emailImage {
