--- a/tutoring-site/styles/Events.module.scss
+++ b/tutoring-site/styles/Events.module.scss
@@ -110,7 +110,7 @@
 }
 
 .botSection {
-  @include coursesHorizontalPadding;
+  // @include coursesHorizontalPadding;
   position: relative;
   overflow: hidden;
 
@@ -128,6 +128,10 @@
   .bubblesRight {
     position: absolute;
     right: -15vh;
+  }
+
+  .eventsContainer {
+    @include coursesHorizontalPadding;
   }
 }
 
@@ -196,8 +200,6 @@
   }
 
   .botSection {
-    padding-left: 5%;
-    padding-right: 5%;
 
     .bubblesLeft {
       position: absolute;
