--- a/tutoring-site/styles/_mixins.scss
+++ b/tutoring-site/styles/_mixins.scss
@@ -60,11 +60,17 @@
   border-radius: 20px;
 }
 
-@mixin tag($background, $color) {
+@mixin tag($background, $color, $needMargin) {
   font-size: 1.8vh;
   font-weight: 600;
   border-radius: 5px;
   padding: 5px 8px;
   background-color: $background;
   color: $color;
+  margin: 0;
+
+  @if ($needMargin) {
+    margin-right: .8rem;
+    margin-top: .5rem;
+  }
 }
