--- a/tutoring-site/styles/Courses.module.scss
+++ b/tutoring-site/styles/Courses.module.scss
@@ -11,6 +11,7 @@
     position: absolute;
     height: auto;
     width: 15rem;
+    left: -50px;
   }
 
   .titlesContainer, .searchContainer {
@@ -66,6 +67,7 @@
         font-weight: 600;
         margin: 0;
         margin-right: 20px;
+        font-size: 1rem;
       }
     }
   }
@@ -277,18 +279,42 @@
 
 @media only screen and (max-width: 600px) {
   /* For mobile phones: */
+
+  // Top Section
+  .topSection {
+    padding-top: 4rem !important;
+  }
   .title {
-    font-size: 2.7vh !important;
+    font-size: 1.3rem !important;
   }
-
   .subtitle {
-    font-size: 1.5vh !important;
+    font-size: .8rem !important;
+    margin-bottom: .3rem !important;
   }
-
   .arrowButton {
-    font-size: 2.5vh !important;
+    font-size: 1.3rem !important;
+  }
+  .searchContainer {
+    margin-bottom: 2rem !important;
+    margin-top: 0;
+
+    .searchSubContainer {
+      padding-right: 0 !important;
+    }
+
+    .gradeSliderContainer {
+      margin-top: 1rem !important;
+      padding: 15px !important;
+      padding-left: 20px !important;
+      padding-right: 30px !important;
+  
+      .gradeLabel {
+        font-size: .8rem !important;
+      }
+    }
   }
 
+  // Bubbles
   .bubblesTopLeft, .imageDetailsContainer{
     display: none;
   }
@@ -300,75 +326,62 @@
     bottom: 350px !important;
   }
 
+  // Bottom course section
   .courseItemBox {
-    margin-bottom: 1.5vh;
-  }
-  .searchContainer {
-    font-size: 1.5vh !important;
-    margin-top: -.01vh !important;
-    margin-bottom: 2rem !important;
-
-    .searchSubContainer {
-      padding-right: 0 !important;
-    }
-  }
-
-  .gradeSliderContainer {
-    margin-top: 2vh;
-    padding: 15px !important;
-    padding-left: 20px !important;
-    padding-right: 30px !important;
-
-    .gradeLabel {
-      font-size: 1.5vh;
-    }
+    margin-bottom: .8rem;
   }
 
   .imageContainer {
     display: none !important;
   }
   .infoContainer {
-    padding-top: 2vh !important;
-    padding-bottom: 2vh !important;
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
 
     .courseName {
-      font-size: 1.8vh !important;
+      font-size: 1rem !important;
     }
     .gradeLevel {
-      font-size: 1.3vh !important;
+      font-size: .7rem !important;
     }
   }
   .detailsButton {
-    font-size: 1.3vh !important;
-    padding: 1.6vh 2vh !important;
     display: none;
   }
   .mobileDetailsButton {
     display: block !important;
-    width: 5vh;
-    height: 5vh;
-  }
-  .courseNameDetails {
-    font-size: 2.3vh !important;
-  }
-  .backButtonIcon {
-    font-size: 3vh;
+    width: 2.2rem;
+    height: 2.2rem;
   }
   .extraInfo {
-    font-size: 1.2vh !important;
+    font-size: .7rem !important;
   }
+
+  // Details section
   .gradeLevelDetailsTag, .priceDetailsTag, .lessonsTotalDetailsTag{
-    font-size: 1.2vh !important;
+    font-size: .7rem !important;
   }
   .descriptionDetails, .trialDetails {
-    font-size: 1.5vh !important;
+    font-size: .8rem !important;
   }
   .detailsItemContainer {
     width: 100% !important;
 
     .detailsInfoContainer {
       padding: 1.2rem 2.7rem;
+
+      .courseNameDetails {
+        font-size: 1.1rem !important;
+      }
+      .backButtonIcon {
+        font-size: 2rem !important;
+      }
     }
   }
 }
 
+@media only screen and (max-width: 400px) {
+  .gradeSliderContainer {
+    width: 100%;
+  }
+}
