--- a/tutoring-site/styles/Home.module.scss
+++ b/tutoring-site/styles/Home.module.scss
@@ -5,8 +5,13 @@
   @include homepageSection;
 }
 
+.title {
+  font-size: 5vh;
+  margin-bottom: 0;
+}
+
 .subtitle {
-  font-size: 2.5vh;
+  font-size: 2.2vh;
   margin-bottom: 5vh;
 }
 
@@ -280,18 +285,19 @@
 
 @media only screen and (max-width: 900px) {
   .interestedContainer {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 10%;
+    padding-right: 10%;
   }
 
   .interestedBox {
-    border-radius: 0;
-    padding: 3vh;
+    border-radius: 28px;
+    padding: 8vh;
     padding-top: 7vh;
     padding-bottom: 7vh;
   }
 
   .emailImage {
+    margin-top: 7vh;
     width: 90%;
   }
 
@@ -323,12 +329,13 @@
 
   .title {
     @include center;
-    font-size: 2.7vh;
+    font-size: 3vh;
+    margin-top: -3vh;
   }
 
   .subtitle {
     @include center;
-    font-size: 1.5vh;
+    font-size: 2vh;
   }
 
   .startingLeft {
@@ -348,11 +355,15 @@
   }
 
   .enrollTitle, .interestedTitle, .discountTitle {
-    font-size: 2.7vh;
+    font-size: 3vh;
+  }
+
+  .interestedTitle {
+    margin-top: 5vh;
   }
  
   .enrollText, .interestedText, .discountText{
-    font-size: 1.5vh;
+    font-size: 2vh;
     padding-left: 5%;
     padding-right: 5%;
     margin-bottom: 3vh;
@@ -360,7 +371,7 @@
 
   .enrollItemText {
     text-align: left;
-    font-size: 1.5vh;
+    font-size: 1.8vh;
   }
 
   .enrollItemContainer {
@@ -376,6 +387,17 @@
     height: auto;
   }
 
+  .interestedContainer {
+    padding-left: 0;
+    padding-right: 0;
+
+  }
+
+  .interestedBox {
+    border-radius: 0;
+    padding: 3vh;
+  }
+
   .forStudentsContainer {
     padding: 10vh 5%;
     overflow: hidden;
@@ -383,7 +405,7 @@
   }
 
   .forStudentsText {
-    font-size: 1.5vh;
+    font-size: 2vh;
     padding-left: 5%;
     padding-right: 5%;
   }
@@ -405,11 +427,17 @@
   }
 
   .interestedStepTitle {
-    font-size: 1.6vh;
+    font-size: 2vh;
   }
 
   .interestedStepText {
-    font-size: 1.2vh;
+    font-size: 1.8vh;
+  }
+
+  .emailImage {
+    margin-top: 5vh;
+    width: 100%;
+    margin-bottom: 5vh;
   }
 
   .discountBox {
