made some responsive changes

--- a/tutoring-site/styles/Contact.module.scss
+++ b/tutoring-site/styles/Contact.module.scss
@@ -51,7 +51,7 @@
   padding-right: 4vh;
 
   font-weight: 300;
-  font-size: 1vmax;
+  font-size: 0.8rem;
   width:90%;
   justify-content: flex-start;
   text-transform: none;
