--- a/tutoring-site/styles/Courses.module.scss
+++ b/tutoring-site/styles/Courses.module.scss
@@ -6,7 +6,7 @@
   background-color: $lightest;
   width: 100%;
   padding-top: 10vh;
-  height: 40vh;
+  height: 32vh;
 
   .bubblesTopLeft {
     position: absolute;
@@ -22,7 +22,7 @@
     .title {
       color: $dark;
       font-size: 3.5vh;
-      margin-bottom: 0;
+      margin-bottom: 2vh;
     }
     .subtitle {
       color: $darkest;
@@ -103,7 +103,7 @@
   width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
-  top: 45vh;
+  top: 38vh;
   bottom: 0;
   transition: 1s ease-in-out;
 
@@ -291,7 +291,7 @@
   }
   .title {
     font-size: 1.3rem !important;
-    margin-bottom: 0 !important;
+    margin-bottom: .8rem !important;
   }
   .subtitle {
     font-size: .8rem !important;
@@ -363,7 +363,7 @@
     font-size: .7rem !important;
   }
   .coursesContainer {
-    top: 22rem;
+    top: 20rem;
 
     .noCourses {
       font-size: 1rem !important;
