--- a/tutoring-site/styles/Home.module.scss
+++ b/tutoring-site/styles/Home.module.scss
@@ -165,12 +165,17 @@
   @include homepageSection;
 
   position: relative;
+  min-height: 0vh;
 }
 
 .interestedBox {
   background-color: #D0F1EB;
   border-radius: 28px;
   padding: 12vh;
+}
+
+.interestedTitle {
+  margin-bottom: 0;
 }
 
 .interestedText {
@@ -183,6 +188,7 @@
 
 .interestedSteps {
   padding-left: 4vh;
+  margin-top: 5vh
 }
 
 .interestedStepCircle {
@@ -207,7 +213,7 @@
 
 .interestedStepBox {
   background-color: $lightest;
-  padding: 0vh;
+  padding: 5vh;
   padding-left: 6vh;
   border-radius: 21px;
   position: relative;
