courses + china/canada

--- a/tutoring-site/styles/Navbar.module.scss
+++ b/tutoring-site/styles/Navbar.module.scss
@@ -36,7 +36,7 @@
 }
 
 .china {
-  background-image: url('/images/china.svg');
+  background-image: url('https://firebasestorage.googleapis.com/v0/b/website-d9767.appspot.com/o/Misc.%20Images%2Fchina.svg?alt=media&token=390e243f-6381-424e-9de5-81e0c2f12078&_gl=1*bntw4z*_ga*MTQ4ODU4NDg0NC4xNjk5MDY5Nzg0*_ga_CW55HF8NVT*MTY5OTMyMDU2My41LjEuMTY5OTMyMDY0MS41Ni4wLjA.');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
@@ -44,7 +44,7 @@
 }
 
 .canada {
-  background-image: url('/images/canada.svg');
+  background-image: url('https://firebasestorage.googleapis.com/v0/b/website-d9767.appspot.com/o/Misc.%20Images%2Fcanada.svg?alt=media&token=068482ee-5c1c-43b2-ab74-d0a91c2a5bee&_gl=1*1y48k4j*_ga*MTQ4ODU4NDg0NC4xNjk5MDY5Nzg0*_ga_CW55HF8NVT*MTY5OTMyMDU2My41LjEuMTY5OTMyMDY4MS4xNi4wLjA.');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
